--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "next": "15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "18.2.39",
-    "@types/react-dom": "^19",
+    "@types/react-dom": "18.2.22",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
