--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "react-youtube": "^10.1.0"
+    "react-youtube": "^10.1.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
