--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
-    "next": "15.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-youtube": "^10.1.0",
-    "recoil": "^0.7.7"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
