--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-range-slider-input": "^3.0.7",
+    "react-select": "^5.9.0",
     "react-youtube": "^10.1.0",
     "zustand": "^5.0.2"
   },
