--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@tanstack/react-query": "^5.62.15",
     "axios": "^1.7.9",
     "next": "^15.1.2",
     "react": "^19.0.0",
