--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "swr": "^2.3.0",
     "zustand": "^5.0.2"
   },
+  "engines": {
+    "node": ">=18.18.0"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
