--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/node": "^20",
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.22",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
