--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-icons": "^5.4.0",
     "react-range-slider-input": "^3.0.7",
     "react-select": "^5.9.0",
